@@ -1,7 +1,9 @@
 package NandK.CookABook.service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 
@@ -54,13 +56,8 @@ public class CartService {
     }
 
     // Lấy số lượng sản phẩm trong giỏ hàng để hiển thị trên giỏ hàng
-    public Integer getTotalQuantityById(Long cartId) {
-        Cart cart = this.getCartById(cartId);
-        if (cart != null) {
-            return cart.getTotalQuantity();
-        } else {
-            return null;
-        }
+    public Integer getCartSize(Cart cart) {
+        return cart.getCartItems().size();
     }
 
     // Thêm sách vào giỏ hàng hoặc cập nhật số lượng
@@ -111,9 +108,12 @@ public class CartService {
         cartPreviewResponse.setTotalDiscountPrice(cart.getTotalDiscountPrice());
         // Lấy thông tin sách trong giỏ hàng
         List<CartItem> cartItems = this.cartItemRepository.findByCart(cart);
+        if (cartItems == null) {
+            cartItems = new ArrayList<>(); // Nếu không có sản phẩm trong giỏ, khởi tạo một danh sách trống
+        }
         List<CartItemResponse> cartItemResponses = cartItems.stream()
                 .map(cartItem -> this.cartItemService.convertToCartItemResponse(cartItem))
-                .toList();
+                .collect(Collectors.toList());
         cartPreviewResponse.setCartItems(cartItemResponses);
         return cartPreviewResponse;
     }
@@ -130,7 +130,7 @@ public class CartService {
         // Lấy thông tin sách trong giỏ hàng
         List<CartItemPaymentResponse> cartItemPaymentResponses = selectedItems.stream()
                 .map(cartItem -> this.cartItemService.convertToCartItemPaymentResponse(cartItem))
-                .toList();
+                .collect(Collectors.toList());
         cartPaymentResponse.setCartItems(cartItemPaymentResponses);
         return cartPaymentResponse;
     }
@@ -149,6 +149,10 @@ public class CartService {
 
     // Tính tổng tiền giỏ hàng chỉ cho những sản phẩm được chọn
     public void calculateCartPrice(Cart cart) {
+        // Reset tổng tiền giỏ hàng
+        cart.setTotalOriginalPrice(0);
+        cart.setTotalDiscountPrice(0);
+        cart.setTotalFinalPrice(0);
         List<CartItem> cartItems = this.getSelectedItems(cart);
         if (cartItems != null) {
             for (CartItem cartItem : cartItems) {
